📚 Auto-update: News data refreshed - 2026-01-10 05:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49358,5 +49358,21 @@
         "published": "Sat, 10 Jan 2026 02:56:50 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46562301\">Comments</a>"
+    },
+    {
+        "id": "https://rushter.com/blog/zsh-shell/",
+        "title": "You probably don't need Oh My Zsh",
+        "link": "https://rushter.com/blog/zsh-shell/",
+        "published": "Sat, 10 Jan 2026 04:35:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46562790\">Comments</a>"
+    },
+    {
+        "id": "https://nuxx.net/blog/2026/01/09/oled-not-for-me/",
+        "title": "OLED, Not for Me",
+        "link": "https://nuxx.net/blog/2026/01/09/oled-not-for-me/",
+        "published": "Sat, 10 Jan 2026 03:52:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46562583\">Comments</a>"
     }
 ]
