--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -49374,5 +49374,21 @@
         "published": "Sat, 10 Jan 2026 03:52:48 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46562583\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/total-wireless-promo-code/",
+        "title": "Total Wireless Promo Codes & Deals: 50% Off Select Plans",
+        "link": "https://www.wired.com/story/total-wireless-promo-code/",
+        "published": "Sat, 10 Jan 2026 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Find great deals for Total Wireless, like 50% off select plans, and enjoy big savings."
+    },
+    {
+        "id": "https://source.android.com/",
+        "title": "Changes to Android Open Source Project",
+        "link": "https://source.android.com/",
+        "published": "Wed, 07 Jan 2026 09:35:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46524379\">Comments</a>"
     }
 ]
