📚 Auto-update: News data refreshed - 2026-01-10 08:14 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49390,5 +49390,13 @@
         "published": "Wed, 07 Jan 2026 09:35:46 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46524379\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/indonesia-temporarily-blocks-access-to-grok-over-sexualised-images/articleshow/126449412.cms",
+        "title": "Indonesia temporarily blocks access to Grok over sexualised images",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/indonesia-temporarily-blocks-access-to-grok-over-sexualised-images/articleshow/126449412.cms",
+        "published": "Sat, 10 Jan 2026 13:15:39 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "xAI, the startup behind Grok, said on Thursday it was restricting image generation and editing to paying subscribers as it tried \u200bto fix safeguard lapses that \u200bhad allowed sexualised outputs including depictions of scantily \u200cclad \u200dchildren."
     }
 ]
