📚 Auto-update: News data refreshed - 2026-01-10 09:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49398,5 +49398,21 @@
         "published": "Sat, 10 Jan 2026 13:15:39 +0530",
         "source": "Tech-Economic Times",
         "summary": "xAI, the startup behind Grok, said on Thursday it was restricting image generation and editing to paying subscribers as it tried \u200bto fix safeguard lapses that \u200bhad allowed sexualised outputs including depictions of scantily \u200cclad \u200dchildren."
+    },
+    {
+        "id": "https://blog.appsignal.com/2025/12/03/the-performance-revolution-in-javascript-tooling.html",
+        "title": "The Performance Revolution in JavaScript Tooling",
+        "link": "https://blog.appsignal.com/2025/12/03/the-performance-revolution-in-javascript-tooling.html",
+        "published": "Sat, 03 Jan 2026 21:18:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46481682\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/features/insurance-promises-vs-ground-reality-gig-workers-push-back-on-zomato-swiggy-claims/",
+        "title": "Insurance Promises Vs Ground Reality: Gig Workers Push Back on Zomato, Swiggy Claims",
+        "link": "https://inc42.com/features/insurance-promises-vs-ground-reality-gig-workers-push-back-on-zomato-swiggy-claims/",
+        "published": "Sat, 10 Jan 2026 08:28:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"675\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/features-gig.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1200\" />Zomato and Blinkit shelled out INR 100 Cr in premium last year to cover their gig armies. Eternal CEO Deepinder&#8230;"
     }
 ]
