📚 Auto-update: News data refreshed - 2026-01-10 10:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49414,5 +49414,21 @@
         "published": "Sat, 10 Jan 2026 08:28:52 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"675\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/features-gig.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1200\" />Zomato and Blinkit shelled out INR 100 Cr in premium last year to cover their gig armies. Eternal CEO Deepinder&#8230;"
+    },
+    {
+        "id": "https://chipsandcheese.com/p/diving-into-qualcomms-upcoming-adreno",
+        "title": "Diving into Qualcomm's Upcoming Adreno X2 GPU with Eric Demers",
+        "link": "https://chipsandcheese.com/p/diving-into-qualcomms-upcoming-adreno",
+        "published": "Mon, 05 Jan 2026 11:10:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46497443\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/india-upi-transactions-how-indians-spent-saved-speculated-2025",
+        "title": "UPI transactions capture how Indians spent, saved, and speculated in 2025",
+        "link": "https://yourstory.com/2026/01/india-upi-transactions-how-indians-spent-saved-speculated-2025",
+        "published": "Sat, 10 Jan 2026 08:35:04 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "From the end of real-money gaming to the rise of digital gold, YourStory decodes the 228 billion transactions that shaped 2025."
     }
 ]
