--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -49430,5 +49430,69 @@
         "published": "Sat, 10 Jan 2026 08:35:04 GMT",
         "source": "YourStory RSS Feed",
         "summary": "From the end of real-money gaming to the rise of digital gold, YourStory decodes the 228 billion transactions that shaped 2025."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-coffee-subscriptions/",
+        "title": "12 Best Coffee Subscriptions (2026), Tested by Caffeine Hounds",
+        "link": "https://www.wired.com/gallery/best-coffee-subscriptions/",
+        "published": "Sat, 10 Jan 2026 11:01:00 +0000",
+        "source": "WIRED",
+        "summary": "These services deliver freshly roasted, delicious coffee picks right to your door\u2014each with its own twist."
+    },
+    {
+        "id": "https://www.wired.com/story/where-were-all-the-new-cars-at-ces-2026/",
+        "title": "Where Are All the New Cars?",
+        "link": "https://www.wired.com/story/where-were-all-the-new-cars-at-ces-2026/",
+        "published": "Sat, 10 Jan 2026 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "New cars were scant at CES this year, largely because the center of gravity for the auto world has moved\u2014technologically and geographically\u2014to China."
+    },
+    {
+        "id": "https://phys.org/news/2026-01-eye-greenland-sharks-vision-centuries.html",
+        "title": "Greenland sharks maintain vision for centuries through DNA repair mechanism",
+        "link": "https://phys.org/news/2026-01-eye-greenland-sharks-vision-centuries.html",
+        "published": "Tue, 06 Jan 2026 12:44:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46511555\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/peri-perimenopause-tracker-ces-2026/",
+        "title": "I did not expect the best women's health tracker at CES to be this one (but it is)",
+        "link": "https://www.zdnet.com/article/peri-perimenopause-tracker-ces-2026/",
+        "published": "Sat, 10 Jan 2026 11:01:09 GMT",
+        "source": "Latest news",
+        "summary": "Peri is a health wearable that detects perimenopausal symptoms. It's available for preorder now."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nine-itis-in-odisha-to-get-ai-labs-cm-mohan-charan-majhi/articleshow/126451261.cms",
+        "title": "Nine ITIs in Odisha to get AI labs: CM Mohan Charan Majhi",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nine-itis-in-odisha-to-get-ai-labs-cm-mohan-charan-majhi/articleshow/126451261.cms",
+        "published": "Sat, 10 Jan 2026 16:10:43 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Odisha chief minister Mohan Charan Majhi on Friday said artificial intelligence (AI) laboratories are being set up in nine Industrial Training Institutes (ITIs) of the state."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/google-founders-larry-page-sergey-brin-pull-back-from-california-over-wealth-tax-fears/articleshow/126451019.cms",
+        "title": "Google founders Larry Page, Sergey Brin pull back from California over wealth tax fears",
+        "link": "https://economictimes.indiatimes.com/tech/technology/google-founders-larry-page-sergey-brin-pull-back-from-california-over-wealth-tax-fears/articleshow/126451019.cms",
+        "published": "Sat, 10 Jan 2026 15:49:25 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Google founders Larry Page and Sergey Brin are reducing their California business presence, moving companies to Nevada and buying property elsewhere, amid concern over a proposed California wealth tax on billionaires. The measure has sparked debate, with tech leaders warning it could drive capital and innovation out of Silicon Valley."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/brew-smell-and-serve-ai-steals-the-show-at-ces-2026/articleshow/126451016.cms",
+        "title": "Brew, smell, and serve: AI steals the show at CES 2026",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/brew-smell-and-serve-ai-steals-the-show-at-ces-2026/articleshow/126451016.cms",
+        "published": "Sat, 10 Jan 2026 15:48:48 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "AI dominated CES 2026, from voice-controlled espresso machines by Bosch using Amazon Alexa, to personalised perfumes from DigitalScent. Tennis robots from UBTech and Tenniix showcased AI-driven realism in sport and lifestyle tech."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-gobbling-up-memory-chips-essential-to-gadget-makers/articleshow/126450994.cms",
+        "title": "AI gobbling up memory chips essential to gadget makers",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-gobbling-up-memory-chips-essential-to-gadget-makers/articleshow/126450994.cms",
+        "published": "Sat, 10 Jan 2026 15:47:48 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "At the Consumer Electronics Show, gadget makers warned of a global DRAM shortage driven by booming AI demand. Memory prices are soaring, boosting revenues at Samsung Electronics and Micron Technology. IDC says shortages may last into next year, forcing higher prices and fewer device features."
     }
 ]
