--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -49534,5 +49534,85 @@
         "published": "Sat, 10 Jan 2026 17:30:37 +0530",
         "source": "Tech-Economic Times",
         "summary": "The PM held a closed-door meeting at his residence on January 8 with about a dozen founders from the IndiaAI Mission cohort. Union IT minister Ashwini Vaishnaw and senior officials of MeitY also attended the meeting. Modi told the founders to develop safe and authenticated AI, prioritising trust, transparency, and watermarking in their models to build user confidence and comply with evolving regulations."
+    },
+    {
+        "id": "https://www.theverge.com/tech/859808/ces-2026-best-gadgets-installer",
+        "title": "The CES 2026 stuff I might actually buy",
+        "link": "https://www.theverge.com/tech/859808/ces-2026-best-gadgets-installer",
+        "published": "2026-01-10T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Hi, friends! Welcome to Installer No. 111, your guide to the best and Verge-iest stuff in the world. (If you're new here, welcome, hope you had a wonderful holiday season, and also you can read all the old editions at the Installer homepage.) This week, I've been reading about gerrymandering and watch conventions and John [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/859891/awesome-games-done-quick-2026-indie-games-small-saga",
+        "title": "A charity speedrunning event has turned into a perfect showcase for smaller games",
+        "link": "https://www.theverge.com/games/859891/awesome-games-done-quick-2026-indie-games-small-saga",
+        "published": "2026-01-10T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Games Done Quick, the biannual charity speedrunning event currently going on right now, not only helps organizations like the Prevent Cancer Foundation and Doctors Without Borders - it helps indie games get noticed, too. Indie game developers face an incredible uphill battle not only getting their projects funded, completed, and launched, but discovered as well. [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/new-years-resolution-deals-2026/",
+        "title": "Best Deals for New Year\u2019s Resolutions: Sleep, Fitness, and More (2026)",
+        "link": "https://www.wired.com/story/new-years-resolution-deals-2026/",
+        "published": "Sat, 10 Jan 2026 12:34:00 +0000",
+        "source": "WIRED",
+        "summary": "Whether you\u2019re hitting the gym or tracking your schedule, these discounts on WIRED-approved gear can help."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/conservative-lawmakers-want-porn-taxes-critics-say-theyre-unconstitutional/",
+        "title": "Conservative lawmakers want porn taxes. Critics say they\u2019re unconstitutional.",
+        "link": "https://arstechnica.com/tech-policy/2026/01/conservative-lawmakers-want-porn-taxes-critics-say-theyre-unconstitutional/",
+        "published": "Sat, 10 Jan 2026 12:00:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Half the country has enacted age-verification laws to prevent minors from viewing porn."
+    },
+    {
+        "id": "https://nightingaledvs.com/dark-sky-weather-data-viz/",
+        "title": "A Eulogy for Dark Sky, a Data Visualization Masterpiece (2023)",
+        "link": "https://nightingaledvs.com/dark-sky-weather-data-viz/",
+        "published": "Sat, 10 Jan 2026 12:23:20 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46565132\">Comments</a>"
+    },
+    {
+        "id": "https://eupolicy.social/@jmaris/115860595238097654",
+        "title": "Allow me to introduce, the Citroen C15",
+        "link": "https://eupolicy.social/@jmaris/115860595238097654",
+        "published": "Sat, 10 Jan 2026 11:12:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46564696\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/hp-omnibook-ultra-14-ces/",
+        "title": "This HP laptop just set a new record for battery life at CES 2026 - and it's not bulky",
+        "link": "https://www.zdnet.com/article/hp-omnibook-ultra-14-ces/",
+        "published": "Sat, 10 Jan 2026 13:00:43 GMT",
+        "source": "Latest news",
+        "summary": "Every single OmniBook model is getting upgrades, with one laptop in particular reportedly gaining a record-setting battery life."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/in-changed-stance-zohos-vembu-says-ai-wont-replace-software-engineers/articleshow/126452794.cms",
+        "title": "In changed stance, Zoho\u2019s Vembu says AI won\u2019t replace software engineers",
+        "link": "https://economictimes.indiatimes.com/tech/technology/in-changed-stance-zohos-vembu-says-ai-wont-replace-software-engineers/articleshow/126452794.cms",
+        "published": "Sat, 10 Jan 2026 18:07:04 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Per Zoho chief scientist Sridhar Vembu, AI is effective at writing \u201cglue code\u201d but still relies on experienced engineers to steer it through prompts, intervention, and domain knowledge. A recent review of Anthropic\u2019s Claude Opus 4.5 showed that while the model is powerful, the generated code was fairly simple, with only a fraction being complex and unnecessarily verbose."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/in-changed-stance-zohos-vembu-says-ai-wont-replace-software-engineers/articleshow/126452793.cms",
+        "title": "In changed stance, Zoho\u2019s Sridhar Vembu says AI won\u2019t replace software engineers",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/in-changed-stance-zohos-vembu-says-ai-wont-replace-software-engineers/articleshow/126452793.cms",
+        "published": "Sat, 10 Jan 2026 18:07:04 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Per Zoho chief scientist Sridhar Vembu, AI is effective at writing \u201cglue code\u201d but still relies on experienced engineers to steer it through prompts, intervention, and domain knowledge. A recent review of Anthropic\u2019s Claude Opus 4.5 showed that while the model is powerful, the generated code was fairly simple, with only a fraction being complex and unnecessarily verbose."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/uber-eats-driver-criticises-tesla-model-y-promotes-1999-fiat-in-viral-exchange/articleshow/126452356.cms",
+        "title": "Uber Eats driver criticises Tesla Model Y; promotes 1999 Fiat in viral exchange",
+        "link": "https://economictimes.indiatimes.com/tech/technology/uber-eats-driver-criticises-tesla-model-y-promotes-1999-fiat-in-viral-exchange/articleshow/126452356.cms",
+        "published": "Sat, 10 Jan 2026 17:42:48 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The driver reportedly told the customer that the two-decade-old Fiat was \u201cbuilt to last\u201d and cheaper to maintain. The post drew mixed reactions, with some users backing the claim and joking that older European models often outlast modern cars because of their mechanical simplicity, while others defended Tesla\u2019s Model Y for its energy efficiency and advanced technology. The debate comes as Tesla has lost its position as the world\u2019s largest EV maker, after sales fell for a second straight year, an"
     }
 ]
