--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -49614,5 +49614,69 @@
         "published": "Sat, 10 Jan 2026 17:42:48 +0530",
         "source": "Tech-Economic Times",
         "summary": "The driver reportedly told the customer that the two-decade-old Fiat was \u201cbuilt to last\u201d and cheaper to maintain. The post drew mixed reactions, with some users backing the claim and joking that older European models often outlast modern cars because of their mechanical simplicity, while others defended Tesla\u2019s Model Y for its energy efficiency and advanced technology. The debate comes as Tesla has lost its position as the world\u2019s largest EV maker, after sales fell for a second straight year, an"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850479/desk-pc-keyboard-razer-kobo",
+        "title": "What&#8217;s on your desk, Stevie Bonifield?",
+        "link": "https://www.theverge.com/gadgets/850479/desk-pc-keyboard-razer-kobo",
+        "published": "2026-01-10T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Stevie Bonifield is a news writer here at The Verge and, they say, \u201cI cover a little bit of just about everything, from the FCC to AI shopping tools to Linux.\u201d Before joining our news team, they wrote weekend news for PC Gamer and did reviews, news, features, and guides for Laptop Mag, along with [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/859675/diora-review-playdate-monument-valley",
+        "title": "The Playdate gets its Monument Valley",
+        "link": "https://www.theverge.com/games/859675/diora-review-playdate-monument-valley",
+        "published": "2026-01-10T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Diora might be the most ambitious game I've played on the Playdate. It's all about perspective: You turn the handheld's crank to rotate your viewpoint of the bite-size 3D landscapes, which lets you peek around corners to find solutions to various puzzles. On a device with a 1-bit, black-and-white display, the miniature worlds feel miraculous, [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/cybersecurity/vpn/how-to-change-location-with-a-vpn-140000339.html?src=rss",
+        "title": "How to change location with a VPN",
+        "link": "https://www.engadget.com/cybersecurity/vpn/how-to-change-location-with-a-vpn-140000339.html?src=rss",
+        "published": "Sat, 10 Jan 2026 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Chances are that you're here because you've heard a virtual private network (VPN) can change your virtual location, and want to know what that means. If you know already, head over to my <a class=\"link\" href=\"https://www.engadget.com/cybersecurity/vpn/best-vpn-130004396.html\" target=\"_blank\">best VPN</a> list to learn which services I recommend for changing your location. But if you're clueless, read on.</p><p>Whenever any device connects to the internet \u2014 whether it's a laptop, a phone or a "
+    },
+    {
+        "id": "https://consciousdigital.org/chatgpt-health-is-a-marketplace-guess-who-is-the-product/",
+        "title": "ChatGPT Health is a marketplace, guess who is the product?",
+        "link": "https://consciousdigital.org/chatgpt-health-is-a-marketplace-guess-who-is-the-product/",
+        "published": "Thu, 08 Jan 2026 14:40:20 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46541533\">Comments</a>"
+    },
+    {
+        "id": "https://libroot.org/posts/going-through-snowden-documents-part-4/",
+        "title": "New information extracted from Snowden PDFs through metadata version analysis",
+        "link": "https://libroot.org/posts/going-through-snowden-documents-part-4/",
+        "published": "Sat, 10 Jan 2026 11:23:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46564762\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-smart-home-tech-ces-2026/",
+        "title": "The 13 most useful smart home devices I've seen at CES 2026 (and would buy if I could)",
+        "link": "https://www.zdnet.com/article/best-smart-home-tech-ces-2026/",
+        "published": "Sat, 10 Jan 2026 13:30:52 GMT",
+        "source": "Latest news",
+        "summary": "I spent the week on the CES show floor, searching for compelling smart home devices. Here's what I found."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/india-ai-mission-fuels-startup-ecosystem-strengthens-push-to-make-india-global-ai-producer-experts/articleshow/126453544.cms",
+        "title": "India AI Mission fuels startup ecosystem, strengthens push to make India 'global AI producer': Experts",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/india-ai-mission-fuels-startup-ecosystem-strengthens-push-to-make-india-global-ai-producer-experts/articleshow/126453544.cms",
+        "published": "Sat, 10 Jan 2026 19:06:39 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Industry leaders and startup ecosystem enablers have hailed the Government of India's ambitious India AI Mission, calling it a transformative step toward making India a global hub for artificial intelligence by the end of this decade."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/india-ai-mission-fuels-startup-ecosystem-strengthens-push-to-make-india-global-ai-producer-experts/articleshow/126453513.cms",
+        "title": "IndiaAI Mission fuels startup ecosystem, strengthens push to make India 'global AI producer': Experts",
+        "link": "https://economictimes.indiatimes.com/tech/startups/india-ai-mission-fuels-startup-ecosystem-strengthens-push-to-make-india-global-ai-producer-experts/articleshow/126453513.cms",
+        "published": "Sat, 10 Jan 2026 19:06:39 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Industry leaders and startup ecosystem enablers have hailed the Government of India's ambitious IndiaAI Mission, calling it a transformative step toward making India a global hub for artificial intelligence by the end of this decade."
     }
 ]
