📚 Auto-update: News data refreshed - 2026-01-10 15:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -49678,5 +49678,53 @@
         "published": "Sat, 10 Jan 2026 19:06:39 +0530",
         "source": "Tech-Economic Times",
         "summary": "Industry leaders and startup ecosystem enablers have hailed the Government of India's ambitious IndiaAI Mission, calling it a transformative step toward making India a global hub for artificial intelligence by the end of this decade."
+    },
+    {
+        "id": "https://www.theverge.com/tech/858910/linux-diary-gaming-desktop",
+        "title": "I replaced Windows with Linux and everything\u2019s going great",
+        "link": "https://www.theverge.com/tech/858910/linux-diary-gaming-desktop",
+        "published": "2026-01-10T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Greetings from the year of Linux on my desktop. In November, I got fed up and said screw it, I'm installing Linux. Since that article was published, I have dealt with one minor catastrophe after another. None of that has anything to do with Linux, mind you. It just meant I didn't install it on [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/featured-video/860104/we-tried-to-get-humanoid-robots-to-do-the-laundry",
+        "title": "We tried to get humanoid robots to do the laundry",
+        "link": "https://www.theverge.com/featured-video/860104/we-tried-to-get-humanoid-robots-to-do-the-laundry",
+        "published": "2026-01-10T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "At CES this year, humanoid robots appeared to be closer than ever to moving into our homes. LG introduced CLOiD, a household robot it says can handle chores like preparing food and loading the washing machine. SwitchBot showed off the Onero H1, another home helper built to tackle everyday tasks, and Boston Dynamics, WIRobotics, Zeroth, [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/science/space/nasa-makes-final-preparations-for-its-first-crewed-moon-mission-in-over-50-years-150000825.html?src=rss",
+        "title": "NASA makes final preparations for its first crewed moon mission in over 50 years",
+        "link": "https://www.engadget.com/science/space/nasa-makes-final-preparations-for-its-first-crewed-moon-mission-in-over-50-years-150000825.html?src=rss",
+        "published": "Sat, 10 Jan 2026 15:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Back in 2024, NASA announced that the Artemis 2 mission was going to be <a class=\"link\" href=\"https://www.engadget.com/science/space/nasa-delays-artemis-ii-moon-mission-to-april-2026-224108612.html\" target=\"_blank\">pushed back</a> to April 2026. Now, the agency says it could launch as early as February, with the first flight opportunity being on February 6. NASA is currently <a class=\"link\" href=\"https://www.nasa.gov/missions/artemis/artemis-2/final-steps-underway-for-nasas-first-crewed-artem"
+    },
+    {
+        "id": "https://www.theregister.com/2026/01/10/csr_bill_analysis/",
+        "title": "UK government exempting itself from cyber law inspires little confidence",
+        "link": "https://www.theregister.com/2026/01/10/csr_bill_analysis/",
+        "published": "Sat, 10 Jan 2026 13:51:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46565731\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/cloudflare-threatens-olympic-services-over-piracy-fine/articleshow/126454211.cms",
+        "title": "Cloudflare threatens Olympic services over piracy fine",
+        "link": "https://economictimes.indiatimes.com/tech/technology/cloudflare-threatens-olympic-services-over-piracy-fine/articleshow/126454211.cms",
+        "published": "Sat, 10 Jan 2026 20:07:42 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "US internet company Cloudflare has threatened to pull its services in Italy, including for the Winter Olympics, after being fined 14 million euros ($16 million) for failing to tackle online piracy."
+    },
+    {
+        "id": "https://inc42.com/buzz/from-even-healthcare-to-takeme2space-indian-startups-raised-68-mn-this-week/",
+        "title": "From Even Healthcare To TakeMe2Space \u2014 Indian Startups Raised $68 Mn This Week",
+        "link": "https://inc42.com/buzz/from-even-healthcare-to-takeme2space-indian-startups-raised-68-mn-this-week/",
+        "published": "Sat, 10 Jan 2026 14:40:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"From Even Healthcare To TakeMe2Space \u2014 Indian Startups Raised $68 Mn This Week\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Funding-Galore-FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />After attaining relative stability in the year 2025, Indian startup funding trends were rather muted in the first week of&#8230;"
     }
 ]
